@@ -12,6 +12,7 @@ This major version introduces the concept of build variants, and provides packag
 - Six : Added version 1.14.0.
 - PySetProcTitle : Added version 1.1.10.
 - Subprocess32 : Updated to version 3.5.4.
+- Appleseed : Updated to version 2.1.0-beta
 
 1.2.0
 -----
